# court-judgment-extraction-workflow

./: .gitignore  README.md  config.py  continue_from_325.py  export_to_excel.py  fix_csv_format.py  merge_and_clean.py  pyproject.toml  requirements.txt  start.py
crawler/: __init__.py  detail.py  searcher.py
examples/: sample_cases.csv  sample_judgment.txt
extractor/: __init__.py  parser.py
tests/: test_clean_content.py  test_judgment_parser.py
utils/: __init__.py  helper.py  logger.py
