[project]
name = "court-judgment-extraction-workflow"
version = "0.1.0"
description = "Browser-assisted court judgment collection workflow with CSV checkpoints and legal text field extraction."
requires-python = ">=3.10"
dependencies = [
  "selenium>=4.15.0",
  "requests>=2.31.0",
  "pandas>=2.0.0",
  "openpyxl>=3.0.0",
  "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
